P1 no mvc acabada